name:                transcoder
version: 0.1
author:              Matt Joiner
maintainer:          anacrolix@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable transcoder
  default-language: Haskell2010
  main-is:             Main.hs
  other-modules: SkipChan, FFmpeg, Progress, Extra
  ghc-options: -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-do-bind -threaded
  build-depends:
    async,
    lens,
    base,
    wai,
    warp,
    bytestring,
    cryptohash-md5,
    binary,
    http-types,
    containers,
    stm,
    directory,
    process,
    hex,
    transformers,
    aeson,
    wai-websockets,
    websockets,
    mtl,
    streaming,
    streaming-bytestring,
    streaming-wai,
    hslogger,
    resourcet,
    filepath,
    concurrent-extra,
    streaming-utils,
    text,
    warp-tls,
    tls,
    data-default-class,
    x509,
    x509-validation,
    x509-store,
    disk-free-space,
    unliftio,
    unliftio-core
